--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,4 @@ spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
-oauth.clientId=//TODO TO ADD THE KEY.
+oauth.clientId=314239205062-0fbd7e2dd75u3vvon4h06he90c4ict1b.apps.googleusercontent.com
