--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 spring.datasource.url=jdbc:derby:funrun_db;create=true;collation=TERRITORY_BASED:PRIMARY
 spring.jpa.hibernate.ddl-auto=update
 
-spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
-spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
-spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=docs/sql/ddl.sql
+#spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=docs/sql/ddl.sql
 
 server.use-forward-headers=true
 
